--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,6 +88,7 @@ img{
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container{
   max-width: 1320px;
+  margin-inline: auto;
   padding-inline: 0.75rem;
 }
 
@@ -96,9 +97,67 @@ img{
   gap: 1.5rem;
 }
 
+.section{
+  padding-block: 7.5rem;
+}
+
+.section__container{
+  grid-template-columns: repeat(2, 1fr);
+  margin-bottom: 3rem;
+}
+
+.section__title{
+  
+}
+
 /*=============== HEADER & NAV ===============*/
+.header{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+}
+
+.nav__logo-img{
+  width: 400px;
+}
+
+.nav,
+.nav__list{
+  display: flex;
+}
+
+.nav{
+  height: calc(var(--header-height) + 1.5rem);
+  align-items: center;
+  justify-content: space-between;
+  
+}
+
+.nav__list{
+  column-gap: 3rem;
+}
+
+.nav__link{
+  color: var(--body-color);
+  font-family: var(--second-font);
+  font-size: var(--large-font-size);
+  font-weight: var(--weight-400);
+  transition: all 0.3s var(--transition);
+}
+
+.nav__close,
+.logo__mobile,
+.nav__toggle {
+  display: none;
+}
 
 /* Active link */
+.active-link,
+.nav__link:hover{
+  color: var(--second-color);
+}
 
 /*=============== HOME ===============*/
 .home{
