--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -107,7 +107,41 @@ img{
 }
 
 .section__title{
-  
+  font-size: var(--bigger-font-size);
+}
+
+.section__title,
+.home__description{
+  width: 80%;
+}
+
+.section__subtitle{
+  display: block;
+  color: var(--second-color);
+  font-family: var(--second-font);
+  font-size: var(--large-font-size);
+  font-weight: var(--weight-400);
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  margin-bottom: .25rem;
+}
+
+.section__description{
+  margin-bottom: 1.5rem;
+}
+
+.section__data{
+  display: flex;
+  align-items: center;
+  column-gap: 1.25rem;
+}
+
+.section__img{
+  border-radius: 50%;
+}
+
+.section__data-title{
+  font-size: var(--h3-font-size);
 }
 
 /*=============== HEADER & NAV ===============*/
@@ -285,6 +319,87 @@ img{
 }
 
 /*=============== ABOUT ===============*/
+.about__container{
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.about__item{
+  position: relative;
+}
+
+.about__img{
+  width: 100%;
+  vertical-align: middle;
+}
+
+.about__top,
+.about__hover{
+  position: absolute;
+}
+
+.about__top{
+  inset: 1.25rem;
+  border: 4px solid var(--first-color);
+  transition: all 0.3s --transition;
+}
+
+.about__item:hover .about__top{
+  opacity: 0;
+}
+
+.about__top-title{
+  background-color: var(--first-color);
+  padding-block: .75rem;
+  font-size: var(--h3-font-size);
+  text-align: center;
+  position: absolute;
+  bottom: -1px;
+  inset-inline: -2px;
+}
+
+.about__top,
+.about__top-title,
+.about__img,
+.about__hover{
+  border-radius: 1.75rem;
+}
+
+.about__hover{
+  inset: 0;
+  background-color: hsla(349, 89%, 55%, 0.9);
+  padding-inline: 2.5rem;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  transform: rotateY(90deg) scale(0.5);
+  transition: all .3s var(--transition);
+}
+
+.about__item:hover .about__hover{
+  transform: rotateY(0deg) scale(1);
+}
+
+.about__hover-title,
+.about__description{
+  color: var(--body-color);
+}
+
+.about__hover-title{
+  font-size: var(--h2-font-size);
+}
+
+.about__description{
+  margin-block: 1.25rem 2.5rem;
+}
+
+.about__btn{
+  background-color: var(--body-color);
+  color: var(--title-color);
+}
+
+.about__btn::before{
+  all: unset;
+}
 
 /*=============== MENU ===============*/
 
