--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,6 +115,26 @@ img{
   width: 80%;
 }
 
+.title-center{
+  max-width: 800px;
+  margin-inline: auto;
+  margin-bottom: 5rem;
+  text-align: center;
+  position: relative;
+}
+
+.title-center::after{
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -1.25rem;
+  transform: translateX(-50%);
+  width: 270px;
+  height: 12px;
+  border-radius: 1.5rem;
+  background-color: var(--first-color);
+}
+
 .section__subtitle{
   display: block;
   color: var(--second-color);
@@ -402,6 +422,170 @@ img{
 }
 
 /*=============== MENU ===============*/
+.menu{
+  background-color: var(--container-color);
+}
+
+.menu__container{
+  grid-template-columns: repeat(3, 1fr);
+  align-items: flex-start;
+}
+
+.menu__item{
+  background-color: var(--body-color);
+  border-radius: 1.5rem;
+  position: relative;
+  margin-left: 5.25rem;
+  padding: 3.25rem 1.5rem 3.25rem 7.5rem;
+}
+
+.menu__img-wrapper,
+.menu__img-wrapper::before{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.menu__img-wrapper{
+  left: -5.25rem;
+}
+
+.menu__img-wrapper::before{
+  content: '';
+  background-color: var(--second-color);
+  border-radius: 5.5rem;
+  left: 0;
+  width: 70%;
+  height: 115%;
+}
+
+.menu__img{
+  z-index: 10;
+  position: relative;
+}
+
+.menu__title{
+  font-size: var(--h3-font-size);
+  cursor: pointer;
+  transition: all .3s var(--transition);
+}
+
+.menu__title:hover {
+  color: var(--second-color);
+}
+
+.menu__price{
+  color: var(--second-color);
+  font-family: var(--second-font);
+  font-size: var(--h2-font-size);
+  font-weight: var(--weight-400);
+  display: block;
+  margin-block: 1rem 0.75rem;
+}
+
+.menu__rating{
+  display: flex;
+  column-gap: .375rem;
+  color: var(--first-color);
+  font-size: var(--large-font-size);
+}
+
+.menu__btn{
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
+  width: 50px;
+  height: 50px;
+  border-radius: .5rem;
+  background-color: var(--first-color);
+  display: grid;
+  place-items: center;
+  transition: all .3s var(--transition);
+}
+
+.menu__btn:hover{
+  background-color: var(--second-color);
+}
+
+.menu__btn i {
+  color: var(--title-color);
+  font-size: 2rem;
+  transition: all 0.3s var(--transition);
+}
+
+.menu__btn:hover i{
+  color: var(--body-color);
+}
+
+.opening{
+  background-color: var(--first-color);
+  padding: 2.5rem;
+  border-radius: 1.5rem;
+}
+
+.opening__title{
+  font-size: var(--h2-font-size);
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 2.25rem;
+  position: relative;
+}
+
+.opening__title::after{
+  content: '';
+  position: absolute;
+  bottom: -0.75rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60px;
+  height: 5px;
+  background-color: var(--title-color);
+}
+
+.opening__list{
+  margin-bottom: 1.75rem;
+}
+
+.opening__list :is(dt, dd){
+  color: var(--title-color);
+  font-family: var(--second-font);
+}
+
+.opening__list .close{
+  color: var(--second-color);
+}
+
+.opening__list dt{
+  float: left;
+}
+
+.opening__list dd{
+  text-align: right;
+  margin-bottom: 1.25rem;
+}
+
+.opening__data{
+  background-color: var(--second-color);
+  padding: 1.25rem;
+  border-radius: 1.75rem;
+  text-align: center;
+}
+
+.opening__data h3,
+.opening__description{
+  color: var(--body-color);
+}
+
+.opening__data h3{
+  border-bottom: 5px solid var(--first-color);
+  font-size: var(--h2-font-size);
+  display: inline;
+}
+
+.opening__description{
+  font-size: var(--normal-font-size);
+  margin-top: 1.25rem;
+}
 
 /*=============== SERVICES ===============*/
 
