--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -588,6 +588,44 @@ img{
 }
 
 /*=============== SERVICES ===============*/
+.services .services__container{
+  align-items: center;
+}
+
+.services__container{
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.services__item{
+  text-align: center;
+}
+
+.services__img-wrapper{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: var(--first-color);
+  border: 5px solid var(--body-color);
+  outline: 5px solid var(--first-color);
+  display: grid;
+  place-items: center;
+  margin-inline: auto;
+}
+
+.services__img{
+  width: 76px;
+}
+
+.services__title{
+  font-size: var(--h3-font-size);
+  margin-block: 1.25rem 0.25rem;
+  cursor: pointer;
+  transition: all .3s var(--transition);
+}
+
+.services__title:hover{
+  color: var(--second-color);
+}
 
 /*=============== DEALS ===============*/
 
